updating border, mobile styling and removing images

--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <!-- <meta name="viewport" content="width=device-width; initial-scale=1; maximum-scale=1"> -->
+    <meta name="viewport" content="width=device-width; initial-scale=1; maximum-scale=1">
     <title>Portfolio</title>
     <link type="text/css" href="./style.css" rel="stylesheet" />
     <link
-      href="https://fonts.googleapis.com/css?family=Roboto+Mono"
+      href="https://bit.ly/3rVAh0c"
       rel="stylesheet"
     />
+    <script src="https://bit.ly/31Sp85f"></script>
   </head>
 <body>
   <nav class="navbar">
@@ -24,40 +25,48 @@
       </li>
     </ul>
   </nav>
-<div class="border-box">
-<h1>Sandy Vasquez</h1>
-<div class="section">
-    <div class="content">
-        <div class="title">
-          <div class="title_inner">About Me</div>
-      <!-- <img src="https://picsum.photos/id/180/280/195" width="280" height="195"> -->
-      <p >
-        When she woke late in the afternoon, Lucy's first movement was to feel in 
-        to my surprise, produced the paper which Van Helsing had given me to read. 
-        The careful Professor had replaced it where it had come from, lest on waking she should 
-        be alarmed. Her eye then lit on Van Helsing and on me too, and gladdened. Then she looked 
-        around the room, and seeing where she was, shuddered; she gave a loud cry, and put her poor 
-        thin hands before her pale face. We both understood what that meant--that she had realised 
-        to the full her mother's death; so we tried what we could to comfort her. Doubtless sympathy 
-        eased her somewhat, but she was very low in thought and spirit, and wept silently and weakly 
-        for a long time. We told her that either or both of us would now remain with her all the 
-        time, and that seemed to comfort her. Towards dusk she fell.
+  <div class="band_bio">
+    <div class="section">
+      <div class="content">
+          <div class="title">
+            <h2>Sandy Vasquez</h2>
+            <div class="title_inner">About Me</div>
+    <div class="item-1">
+    <a class="card_bio">
+      <div class="thumb" style="background-image: url(https://i.ibb.co/7jzBKtN/portfolio-background.jpg);"></div>
+      <article>
+        <p>
+        Beyond the green swelling hills of the Mittel Land rose mighty slopes of forest 
+        up to the lofty steeps of the Carpathians themselves. Right and left of us they 
+        towered, with the afternoon sun falling full upon them and bringing out all the 
+        glorious colours of this beautiful range, deep blue and purple in the shadows 
+        of the peaks, green and brown where grass and rock mingled, and an endless perspective
         </p>
+      </article>
+    </a>
+  </div>
        <br> 
-
         <br />
-
           <div class="title"> 
             <div class="title_inner">Experience</div>
           </div>
           <a 
-            href="https://docs.google.com/uc?export=download&id=12NajfPiW7wf4tysOEWPAgkVW0onOcjj9"
+            href="https://bit.ly/3EJsxlK"
             download >Download Resume</a>
       </div>
     </div>
   </div>
   </div>
 </div>
-  </body>
- 
-  
+<footer class="footer">
+  <p>
+    <a href="https://github.com/spv-hub/solar-system"><span class="iconify-inline" data-icon="logos:linkedin-icon"></span></a>
+    <a href="https://github.com/spv-hub/solar-system"><span class="iconify-inline" data-icon="logos:google-gmail"></span></a>
+    <a href="https://github.com/spv-hub/solar-system"><span class="iconify-inline" data-icon="logos:twitter"></span></a>
+  </p>
+© 2021 Sandy Vasquez - powered by Heroku
+</footer>
+</footer>
+</body>
+<html>
+
