--- a/portfolio.html
+++ b/portfolio.html
@@ -2,15 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <!-- <meta name="author" content="John Doe"> -->
     <meta name="viewport" content="width=device-width; initial-scale=1; maximum-scale=1">
     <title>Portfolio</title>
     <script src="index.js"></script>
     <link type="text/css" href="style.css" rel="stylesheet" />
     <link
-      href="https://fonts.googleapis.com/css?family=Roboto+Mono"
+      href="https://bit.ly/3rVAh0c"
       rel="stylesheet"
     />
+    <script src="https://bit.ly/31Sp85f"></script>
   </head>
   <body>
     <nav class="navbar">
@@ -28,8 +28,8 @@
     </nav>
 <div class="band">
     <div class="item-1">
-    <a class="card">
-      <div class="thumb" style="background-image: url(https://i.ibb.co/qdspHwQ/Screen-Shot-2021-11-26-at-10-34-17-PM.png);"></div>
+    <div class="card">
+      <div class="thumb" style="background-image: url(https://bit.ly/3pNEkZL);"></div>
       <article>
         <span>Video Rental Store</span>
         <p>
@@ -39,15 +39,39 @@
         glorious colours of this beautiful range, deep blue and purple in the shadows 
         of the peaks, green and brown where grass and rock mingled, and an endless perspective
         </p>
-        <span>"text"</span>
-  
-      </article>
-    </a>
+        <p>
+          <a href="https://bit.ly/3GvjK7p"><span class="iconify-inline" data-icon="openmoji:github" data-width="22" data-height="22"></span></a>
+          <a href="https://bit.ly/3EMxxG2"><span class="iconify-inline" data-icon="noto:link" data-width="18" data-height="18"></span></a>
+      </p>
+  </article>
+</div>
+</div>
+<div class="item-2">
+<div class="card">
+  <div class="thumb" style="background-image: url(https://i.ibb.co/37Vcg8Y/space.jpg);"></div>
+  <article>
+    <span>Solar System CLI</span>
+    <p>Upon execution, the CLI program outputs the following:</p>
+      <ol>
+        <li><strong>list details:</strong> The CLI program, creates a separate list for planets.
+        </li>
+        <li><strong>read alien details:</strong> If found, details about the alien are displayed.
+        </li>
+        <li><strong>add an alien:</strong> A user can add their own alien.  
+        </li>
+        <li><strong>exit:</strong> Ends the program loop.
+        </li>
+      </ol>
+      <p>
+        <a href="https://github.com/spv-hub/solar-system"><span class="iconify-inline" data-icon="openmoji:github" data-width="22" data-height="22"></span></a>
+        <a href="https://drive.google.com/file/d/1JGCrWN9mm1Xe1c1uwl697k8Fz_f0aq0R/view"><span class="iconify-inline" data-icon="noto:link" data-width="18" data-height="18"></span></a>
+      </p>
+  </article>
+</div>
   </div>
-  
-  <div class="item-2">
-  <a class="card">
-    <div class="thumb" style="background-image: url(https://i.ibb.co/WWHs622/Screen-Shot-2021-07-25-at-12-54-23-PM.png);"></div>
+  <div class="item-3">
+  <div class="card">
+    <div class="thumb" style="background-image: url(https://i.ibb.co/dLjtbRG/book-review-site.png);"></div>
     <article>
       <span>Book Review Site</span>
       <p>
@@ -57,45 +81,21 @@
       glorious colours of this beautiful range, deep blue and purple in the shadows 
       of the peaks, green and brown where grass and rock mingled, and an endless perspective
       </p>
-    </article>
-  </a>
-  </div>
-  
-  <div class="item-3">
-  <a class="card">
-    <div class="thumb" style="background-image: url(https://images.pexels.com/photos/1028600/pexels-photo-1028600.jpeg);"></div>
-    <article>
-      <span>Test 1</span>
       <p>
-      Beyond the green swelling hills of the Mittel Land rose mighty slopes of forest 
-      up to the lofty steeps of the Carpathians themselves. Right and left of us they 
-      towered, with the afternoon sun falling full upon them and bringing out all the 
-      glorious colours of this beautiful range, deep blue and purple in the shadows 
-      of the peaks, green and brown where grass and rock mingled, and an endless perspective
+        <a href="https://bit.ly/3rVVdnJ"><span class="iconify-inline" data-icon="openmoji:github" data-width="22" data-height="22"></span></a>
+        <a href="https://bit.ly/3IFfRP1"><span class="iconify-inline" data-icon="noto:link" data-width="18" data-height="18"></span></a>
       </p>
     </article>
-  </a>
-  </div>
-  
-  <div class="item-4">
-  <a class="card">
-    <div class="thumb" style="background-image: url(https://images.pexels.com/photos/1028600/pexels-photo-1028600.jpeg);"></div>
-    <article>
-      <span>Test 2</span>
-      <p>
-      Beyond the green swelling hills of the Mittel Land rose mighty slopes of forest 
-      up to the lofty steeps of the Carpathians themselves. Right and left of us they 
-      towered, with the afternoon sun falling full upon them and bringing out all the 
-      glorious colours of this beautiful range, deep blue and purple in the shadows 
-      of the peaks, green and brown where grass and rock mingled, and an endless perspective
-      </p>
-    </article>
-  </a>
   </div>
   </div>
+  </div>
+  <footer class="footer">
+    <p>
+      <a href="https://github.com/spv-hub/solar-system"><span class="iconify-inline" data-icon="logos:linkedin-icon"></span></a>
+      <a href="https://github.com/spv-hub/solar-system"><span class="iconify-inline" data-icon="logos:google-gmail"></span></a>
+      <a href="https://github.com/spv-hub/solar-system"><span class="iconify-inline" data-icon="logos:twitter"></span></a>
+    </p>
+  © 2021 Sandy Vasquez - powered by Heroku
+  </footer>
   </body>
-     
-    
-  
-  
-  
+  <html>
