--- a/index.html
+++ b/index.html
@@ -24,13 +24,14 @@
       </li>
     </ul>
   </nav>
-<div class="border-box">
-<h1>Sandy Vasquez</h1>
-<div class="section">
+  <h2>Sandy Vasquez</h2>
+
+  <div class="section">
     <div class="content">
         <div class="title">
           <div class="title_inner">About Me</div>
-      <!-- <img src="https://picsum.photos/id/180/280/195" width="280" height="195"> -->
+          <div class="item-1">
+      <img src="https://picsum.photos/id/180/280/195" width="280" height="195">
       <p >
         When she woke late in the afternoon, Lucy's first movement was to feel in 
         to my surprise, produced the paper which Van Helsing had given me to read. 
