--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Portfolio</title>
     <link type="text/css" href="./style.css" rel="stylesheet" />
     <link
-      href="https://fonts.googleapis.com/css?family=Roboto+Mono"
+      href="https://bit.ly/3rVAh0c"
       rel="stylesheet"
     />
   </head>
@@ -51,7 +51,7 @@
             <div class="title_inner">Experience</div>
           </div>
           <a 
-            href="https://docs.google.com/uc?export=download&id=12NajfPiW7wf4tysOEWPAgkVW0onOcjj9"
+            href="https://bit.ly/3EJsxlK"
             download >Download Resume</a>
       </div>
     </div>
