--- a/portfolio.html
+++ b/portfolio.html
@@ -7,9 +7,10 @@
     <script src="index.js"></script>
     <link type="text/css" href="style.css" rel="stylesheet" />
     <link
-      href="https://fonts.googleapis.com/css?family=Roboto+Mono"
+      href="https://bit.ly/3rVAh0c"
       rel="stylesheet"
     />
+    <script src="https://bit.ly/31Sp85f"></script>
   </head>
   <body>
     <nav class="navbar">
@@ -27,8 +28,8 @@
     </nav>
 <div class="band">
     <div class="item-2">
-    <a class="card">
-      <div class="thumb" style="background-image: url(https://i.ibb.co/qdspHwQ/Screen-Shot-2021-11-26-at-10-34-17-PM.png);"></div>
+    <div class="card">
+      <div class="thumb" style="background-image: url(https://bit.ly/3pNEkZL);"></div>
       <article>
         <span>Video Rental Store</span>
         <p>
@@ -38,14 +39,17 @@
         glorious colours of this beautiful range, deep blue and purple in the shadows 
         of the peaks, green and brown where grass and rock mingled, and an endless perspective
         </p>
-        <span>"text"</span>
-      </article>
-    </a>
+        <p>
+          <a href="https://bit.ly/3GvjK7p"><span class="iconify-inline" data-icon="openmoji:github" data-width="22" data-height="22"></span></a>
+          <a href="https://bit.ly/3EMxxG2"><span class="iconify-inline" data-icon="noto:link" data-width="18" data-height="18"></span></a>
+      </p>
+  </article>
+</div>
   </div>
   
   <div class="item-2">
-  <a class="card">
-    <div class="thumb" style="background-image: url(https://i.ibb.co/WWHs622/Screen-Shot-2021-07-25-at-12-54-23-PM.png);"></div>
+  <div class="card">
+    <div class="thumb" style="background-image: url(https://bit.ly/3IFeUGr);"></div>
     <article>
       <span>Book Review Site</span>
       <p>
@@ -55,10 +59,13 @@
       glorious colours of this beautiful range, deep blue and purple in the shadows 
       of the peaks, green and brown where grass and rock mingled, and an endless perspective
       </p>
+      <p>
+        <a href="https://bit.ly/3rVVdnJ"><span class="iconify-inline" data-icon="openmoji:github" data-width="22" data-height="22"></span></a>
+        <a href="https://bit.ly/3IFfRP1"><span class="iconify-inline" data-icon="noto:link" data-width="18" data-height="18"></span></a>
+      </p>
     </article>
-  </a>
   </div>
-  
+  </div>
   <div class="item-3">
   <a class="card">
     <div class="thumb" style="background-image: url(https://images.pexels.com/photos/1028600/pexels-photo-1028600.jpeg);"></div>
@@ -92,8 +99,5 @@
   </div>
   </div>
   </body>
-     
     
-  
-  
-  
+  <!-- © 2021 Sandy Vasquez - powered by Heroku -->
