--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       href="https://bit.ly/3rVAh0c"
       rel="stylesheet"
     />
+    <script src="https://bit.ly/31Sp85f"></script>
   </head>
 <body>
   <nav class="navbar">
@@ -24,7 +25,6 @@
       </li>
     </ul>
   </nav>
-
   <div class="band_bio">
     <div class="section">
       <div class="content">
@@ -33,7 +33,7 @@
             <div class="title_inner">About Me</div>
     <div class="item-1">
     <a class="card_bio">
-      <div class="thumb" style="background-image: url(https://picsum.photos/id/180/280/195);"></div>
+      <div class="thumb" style="background-image: url(https://i.ibb.co/7jzBKtN/portfolio-background.jpg);"></div>
       <article>
         <p>
         Beyond the green swelling hills of the Mittel Land rose mighty slopes of forest 
@@ -58,6 +58,15 @@
   </div>
   </div>
 </div>
+<footer class="footer">
+  <p>
+    <a href="https://github.com/spv-hub/solar-system"><span class="iconify-inline" data-icon="logos:linkedin-icon"></span></a>
+    <a href="https://github.com/spv-hub/solar-system"><span class="iconify-inline" data-icon="logos:google-gmail"></span></a>
+    <a href="https://github.com/spv-hub/solar-system"><span class="iconify-inline" data-icon="logos:twitter"></span></a>
+  </p>
+© 2021 Sandy Vasquez - powered by Heroku
+</footer>
+</footer>
 </body>
- 
-  
+<html>
+
