--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
       </ul>
     </nav>
 <div class="band">
-    <div class="item-2">
+    <div class="item-1">
     <div class="card">
       <div class="thumb" style="background-image: url(https://bit.ly/3pNEkZL);"></div>
       <article>
@@ -45,9 +45,31 @@
       </p>
   </article>
 </div>
+</div>
+<div class="item-2">
+<div class="card">
+  <iframe src="https://drive.google.com/file/d/1JGCrWN9mm1Xe1c1uwl697k8Fz_f0aq0R/preview"></iframe>
+  <article>
+    <span>Solar System CLI</span>
+    <p>Upon execution, the CLI program outputs the following:</p>
+      <ol>
+        <li><strong>list details:</strong> The CLI program, creates a separate list for each of the above planets 
+        </li>
+        <li><strong>read alien details:</strong> If an alien race is found, details about the alien is displayed.
+        </li>
+        <li><strong>add an alien:</strong>  A user can add their own alien. The program asks for the name of their alien. 
+        </li>
+        <li><strong>exit:</strong> Ends the program loop to successfully exit the program
+        </li>
+      </ol>
+      <p>
+        <a href="https://github.com/spv-hub/solar-system"><span class="iconify-inline" data-icon="openmoji:github" data-width="22" data-height="22"></span></a>
+        <a href="https://drive.google.com/file/d/1JGCrWN9mm1Xe1c1uwl697k8Fz_f0aq0R/view"><span class="iconify-inline" data-icon="noto:link" data-width="18" data-height="18"></span></a>
+      </p>
+  </article>
+</div>
   </div>
-  
-  <div class="item-2">
+  <div class="item-3">
   <div class="card">
     <div class="thumb" style="background-image: url(https://bit.ly/3IFeUGr);"></div>
     <article>
@@ -66,38 +88,14 @@
     </article>
   </div>
   </div>
-  <div class="item-3">
-  <a class="card">
-    <div class="thumb" style="background-image: url(https://images.pexels.com/photos/1028600/pexels-photo-1028600.jpeg);"></div>
-    <article>
-      <span>Test 1</span>
-      <p>
-      Beyond the green swelling hills of the Mittel Land rose mighty slopes of forest 
-      up to the lofty steeps of the Carpathians themselves. Right and left of us they 
-      towered, with the afternoon sun falling full upon them and bringing out all the 
-      glorious colours of this beautiful range, deep blue and purple in the shadows 
-      of the peaks, green and brown where grass and rock mingled, and an endless perspective
-      </p>
-    </article>
-  </a>
   </div>
-  
-  <div class="item-4">
-  <a class="card">
-    <div class="thumb" style="background-image: url(https://images.pexels.com/photos/1028600/pexels-photo-1028600.jpeg);"></div>
-    <article>
-      <span>Test 2</span>
-      <p>
-      Beyond the green swelling hills of the Mittel Land rose mighty slopes of forest 
-      up to the lofty steeps of the Carpathians themselves. Right and left of us they 
-      towered, with the afternoon sun falling full upon them and bringing out all the 
-      glorious colours of this beautiful range, deep blue and purple in the shadows 
-      of the peaks, green and brown where grass and rock mingled, and an endless perspective
-      </p>
-    </article>
-  </a>
-  </div>
-  </div>
+  <footer class="footer">
+    <p>
+      <a href="https://github.com/spv-hub/solar-system"><span class="iconify-inline" data-icon="logos:linkedin-icon"></span></a>
+      <a href="https://github.com/spv-hub/solar-system"><span class="iconify-inline" data-icon="logos:google-gmail"></span></a>
+      <a href="https://github.com/spv-hub/solar-system"><span class="iconify-inline" data-icon="logos:twitter"></span></a>
+    </p>
+  © 2021 Sandy Vasquez - powered by Heroku
+  </footer>
   </body>
-    
-  <!-- © 2021 Sandy Vasquez - powered by Heroku -->
+  <html>
