updating book review picture

--- a/portfolio.html
+++ b/portfolio.html
@@ -71,7 +71,7 @@
   </div>
   <div class="item-3">
   <div class="card">
-    <div class="thumb" style="background-image: url(https://bit.ly/3IFeUGr);"></div>
+    <div class="thumb" style="background-image: url(https://i.ibb.co/dLjtbRG/book-review-site.png);"></div>
     <article>
       <span>Book Review Site</span>
       <p>
