adding different screenshot

--- a/portfolio.html
+++ b/portfolio.html
@@ -48,7 +48,7 @@
 </div>
 <div class="item-2">
 <div class="card">
-  <iframe src="https://drive.google.com/file/d/1JGCrWN9mm1Xe1c1uwl697k8Fz_f0aq0R/preview"></iframe>
+  <div class="thumb" style="background-image: url(https://i.ibb.co/37Vcg8Y/space.jpg);"></div>
   <article>
     <span>Solar System CLI</span>
     <p>Upon execution, the CLI program outputs the following:</p>
