fixing alignment of card text

--- a/portfolio.html
+++ b/portfolio.html
@@ -53,13 +53,13 @@
     <span>Solar System CLI</span>
     <p>Upon execution, the CLI program outputs the following:</p>
       <ol>
-        <li><strong>list details:</strong> The CLI program, creates a separate list for each of the above planets 
+        <li><strong>list details:</strong> The CLI program, creates a separate list for planets.
         </li>
-        <li><strong>read alien details:</strong> If an alien race is found, details about the alien is displayed.
+        <li><strong>read alien details:</strong> If found, details about the alien are displayed.
         </li>
-        <li><strong>add an alien:</strong>  A user can add their own alien. The program asks for the name of their alien. 
+        <li><strong>add an alien:</strong> A user can add their own alien.  
         </li>
-        <li><strong>exit:</strong> Ends the program loop to successfully exit the program
+        <li><strong>exit:</strong> Ends the program loop.
         </li>
       </ol>
       <p>
