--- a/portfolio.html
+++ b/portfolio.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width; initial-scale=1; maximum-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>Portfolio</title>
     <script src="index.js"></script>
     <link type="text/css" href="style.css" rel="stylesheet" />
@@ -90,10 +90,10 @@
   </div>
   </div>
   <footer class="footer">
-    <p>
-      <a href="https://github.com/spv-hub/solar-system"><span class="iconify-inline" data-icon="logos:linkedin-icon"></span></a>
+    <p class="p-footer">
+      <a href="https://github.com/spv-hub/solar-system"><span class="iconify-inline" data-icon="logos:linkedin-icon" id="iconify-inline-linkedin"></span></a>
       <a href="https://github.com/spv-hub/solar-system"><span class="iconify-inline" data-icon="logos:google-gmail"></span></a>
-      <a href="https://github.com/spv-hub/solar-system"><span class="iconify-inline" data-icon="logos:twitter"></span></a>
+      <a href="https://github.com/spv-hub/solar-system"><span class="iconify-inline" data-icon="logos:twitter" id="iconify-inline-twitter"></span></a>
     </p>
   © 2021 Sandy Vasquez - powered by Heroku
   </footer>
