--- a/portfolio.html
+++ b/portfolio.html
@@ -1,101 +1,247 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width; initial-scale=1; maximum-scale=1">
-    <title>Portfolio</title>
-    <script src="index.js"></script>
-    <link type="text/css" href="style.css" rel="stylesheet" />
-    <link
-      href="https://bit.ly/3rVAh0c"
-      rel="stylesheet"
-    />
-    <script src="https://bit.ly/31Sp85f"></script>
-  </head>
-  <body>
-    <nav class="navbar">
-      <div id="left"></div>
-      <div id="right"></div>
-      <div id="top"></div>
-      <div id="bottom"></div>
-        <li class = "nav-item">
-          <a href="./index.html" class="navbar">Home</a>
-        </li>
-        <li class = "nav-item">
-          <a href="./portfolio.html" class="navbar">Portfolio</a>
-        </li>
-      </ul>
-    </nav>
-<div class="band">
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Sandy Vasquez: Portfolio</title>
+  <!-- favicon -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <!-- end -->
+  <script src="index.js"></script>
+  <link type="text/css" href="style.css" rel="stylesheet" />
+  <link href="https://bit.ly/3rVAh0c" rel="stylesheet" />
+  <script src="https://bit.ly/31Sp85f"></script>
+</head>
+
+<body>
+  <nav class="navbar">
+    <div id="left"></div>
+    <div id="right"></div>
+    <div id="top"></div>
+    <div id="bottom"></div>
+    <li class="nav-item">
+      <a href="./index.html" class="navbar">Home |</a>
+    </li>
+    <li class="nav-item">
+      <a href="./portfolio.html" class="navbar">Portfolio</a>
+    </li>
+    </ul>
+  </nav>
+  <div class="band">
     <div class="item-1">
-    <div class="card">
-      <div class="thumb" style="background-image: url(https://bit.ly/3pNEkZL);"></div>
-      <article>
-        <span>Video Rental Store</span>
-        <p>
-        Beyond the green swelling hills of the Mittel Land rose mighty slopes of forest 
-        up to the lofty steeps of the Carpathians themselves. Right and left of us they 
-        towered, with the afternoon sun falling full upon them and bringing out all the 
-        glorious colours of this beautiful range, deep blue and purple in the shadows 
-        of the peaks, green and brown where grass and rock mingled, and an endless perspective
-        </p>
-        <p>
-          <a href="https://bit.ly/3GvjK7p"><span class="iconify-inline" data-icon="openmoji:github" data-width="22" data-height="22"></span></a>
-          <a href="https://bit.ly/3EMxxG2"><span class="iconify-inline" data-icon="noto:link" data-width="18" data-height="18"></span></a>
-      </p>
-  </article>
-</div>
-</div>
-<div class="item-2">
-<div class="card">
-  <div class="thumb" style="background-image: url(https://i.ibb.co/37Vcg8Y/space.jpg);"></div>
-  <article>
-    <span>Solar System CLI</span>
-    <p>Upon execution, the CLI program outputs the following:</p>
-      <ol>
-        <li><strong>list details:</strong> The CLI program, creates a separate list for planets.
-        </li>
-        <li><strong>read alien details:</strong> If found, details about the alien are displayed.
-        </li>
-        <li><strong>add an alien:</strong> A user can add their own alien.  
-        </li>
-        <li><strong>exit:</strong> Ends the program loop.
-        </li>
-      </ol>
-      <p>
-        <a href="https://github.com/spv-hub/solar-system"><span class="iconify-inline" data-icon="openmoji:github" data-width="22" data-height="22"></span></a>
-        <a href="https://drive.google.com/file/d/1JGCrWN9mm1Xe1c1uwl697k8Fz_f0aq0R/view"><span class="iconify-inline" data-icon="noto:link" data-width="18" data-height="18"></span></a>
-      </p>
-  </article>
-</div>
-  </div>
-  <div class="item-3">
-  <div class="card">
-    <div class="thumb" style="background-image: url(https://i.ibb.co/dLjtbRG/book-review-site.png);"></div>
-    <article>
-      <span>Book Review Site</span>
-      <p>
-      Beyond the green swelling hills of the Mittel Land rose mighty slopes of forest 
-      up to the lofty steeps of the Carpathians themselves. Right and left of us they 
-      towered, with the afternoon sun falling full upon them and bringing out all the 
-      glorious colours of this beautiful range, deep blue and purple in the shadows 
-      of the peaks, green and brown where grass and rock mingled, and an endless perspective
-      </p>
-      <p>
-        <a href="https://bit.ly/3rVVdnJ"><span class="iconify-inline" data-icon="openmoji:github" data-width="22" data-height="22"></span></a>
-        <a href="https://bit.ly/3IFfRP1"><span class="iconify-inline" data-icon="noto:link" data-width="18" data-height="18"></span></a>
-      </p>
-    </article>
-  </div>
-  </div>
+      <div class="card">
+        <div class="thumb-1"
+          style="background-image: url(https://i.ibb.co/XVd2mNJ/0-C213537-9-EF8-4-E43-809-B-9-A8-CFE795352.png);"></div>
+        <article>
+          <span class="app-title">Pet Calendar App</span>
+          <p class="app-text">
+            Beyond the green swelling hills of the Mittel Land rose mighty slopes of forest
+            up to the lofty steeps of the Carpathians themselves. Right and left of us they
+            towered, with the afternoon sun falling full upon them and bringing out all the
+            glorious colours of this beautiful range, deep blue and purple in the shadows
+            of the peaks, green and brown where grass and rock mingled, and an endless perspective
+          </p>
+          <p>
+            <a href="https://github.com/spv-hub/myZooKeeper"><span class="iconify-inline" data-icon="openmoji:github"
+                data-width="22" data-height="22" id="iconify-inline-github"></span></a>
+
+            <a href="https://vimeo.com/669354435"><span class="iconify-inline" data-icon="noto:link" data-width="18"
+                data-height="18"></span></a>
+          </p>
+        </article>
+      </div>
+    </div>
+    <div class="item-1">
+      <div class="card">
+        <div class="thumb-5" style="background-image: url(https://bit.ly/3pNEkZL);"></div>
+        <article>
+          <span class="app-title">Video Rental Store</span>
+          <p class="app-text">
+            Beyond the green swelling hills of the Mittel Land rose mighty slopes of forest
+            up to the lofty steeps of the Carpathians themselves. Right and left of us they
+            towered, with the afternoon sun falling full upon them and bringing out all the
+            glorious colours of this beautiful range, deep blue and purple in the shadows
+            of the peaks, green and brown where grass and rock mingled, and an endless perspective
+          </p>
+          <p>
+            <a href="https://bit.ly/3GvjK7p"><span class="iconify-inline" data-icon="openmoji:github" data-width="22"
+                data-height="22" id="iconify-inline-github"></span></a>
+            <a href="https://bit.ly/3EMxxG2"><span class="iconify-inline" data-icon="noto:link" data-width="18"
+                data-height="18"></span></a>
+          </p>
+        </article>
+      </div>
+    </div>
+    <div class="item-1">
+      <div class="card">
+        <div class="thumb-3" style="background-image: url(https://i.ibb.co/X8BMp5J/media.png);"></div>
+        <article>
+          <span class="app-title">Media Ranker Digest</span>
+          <p class="app-text">
+            Beyond the green swelling hills of the Mittel Land rose mighty slopes of forest
+            up to the lofty steeps of the Carpathians themselves. Right and left of us they
+            towered, with the afternoon sun falling full upon them and bringing out all the
+            glorious colours of this beautiful range, deep blue and purple in the shadows
+            of the peaks, green and brown where grass and rock mingled, and an endless perspective
+          </p>
+          <p>
+            <a href="https://github.com/spv-hub/media-ranker"><span class="iconify-inline" data-icon="openmoji:github"
+                data-width="22" data-height="22" id="iconify-inline-github"></span></a>
+            <a href="https://media-ranker-digest.herokuapp.com/"><span class="iconify-inline" data-icon="noto:link"
+                data-width="18" data-height="18"></span></a>
+          </p>
+        </article>
+      </div>
+    </div>
+    <div class="item-1">
+      <div class="card">
+        <div class="thumb-5" style="background-image: url(https://i.ibb.co/sW20Kys/ride.png);"></div>
+        <article>
+          <span class="app-title">Ride Share Rails</span>
+          <p class="app-text">
+            Beyond the green swelling hills of the Mittel Land rose mighty slopes of forest
+            up to the lofty steeps of the Carpathians themselves. Right and left of us they
+            towered, with the afternoon sun falling full upon them and bringing out all the
+            glorious colours of this beautiful range, deep blue and purple in the shadows
+            of the peaks, green and brown where grass and rock mingled, and an endless perspective
+          </p>
+          <p>
+            <a href="https://github.com/spv-hub/ride-share-rails"><span class="iconify-inline"
+                data-icon="openmoji:github" data-width="22" data-height="22" id="iconify-inline-github"></span></a>
+            <a href="https://ride-share-service.herokuapp.com/"><span class="iconify-inline" data-icon="noto:link"
+                data-width="18" data-height="18"></span></a>
+          </p>
+        </article>
+      </div>
+    </div>
+    <div class="item-2">
+      <div class="card">
+        <div class="thumb-solar" style="background-image: url(https://i.ibb.co/37Vcg8Y/space.jpg);"></div>
+        <article>
+          <span class="app-title">Solar System CLI</span>
+          <p class="app-text-1">Upon execution, the CLI program outputs the following:</p>
+          <ol class="list-text">
+            <li><span class="highlight-2"><strong>list details:</strong></span> The CLI program, creates a separate list for planets.
+            </li>
+            <li><span class="highlight-2"><strong>read alien details:</strong></span> If found, details about the alien are displayed.
+            </li>
+            <li><span class="highlight-2"><strong>add an alien:</strong></span> A user can add their own alien.
+            </li>
+            <li><span class="highlight-2"><strong>exit:</strong></span> Ends the program loop.
+            </li>
+          </ol>
+          <p>
+            <a href="https://github.com/spv-hub/solar-system"><span class="iconify-inline" data-icon="openmoji:github"
+                data-width="22" data-height="22" id="iconify-inline-github"></span></a>
+            <a href="https://drive.google.com/file/d/1JGCrWN9mm1Xe1c1uwl697k8Fz_f0aq0R/view"><span
+                class="iconify-inline" data-icon="noto:link" data-width="18" data-height="18"></span></a>
+          </p>
+        </article>
+      </div>
+    </div>
+    <div class="item-1">
+      <div class="card">
+        <div class="thumb-books"
+          style="background-image: url(https://i.ibb.co/FmvrjyN/test2.png);"></div>
+        <article>
+          <span class="app-title">Book Review Site</span>
+          <p class="app-text">
+            Beyond the green swelling hills of the Mittel Land rose mighty slopes of forest
+            up to the lofty steeps of the Carpathians themselves. Right and left of us they
+            towered, with the afternoon sun falling full upon them and bringing out all the
+            glorious colours of this beautiful range, deep blue and purple in the shadows
+            of the peaks, green and brown where grass and rock mingled, and an endless perspective
+          </p>
+          <p>
+            <a href="https://bit.ly/3rVVdnJ"><span class="iconify-inline" data-icon="openmoji:github" data-width="22"
+                data-height="22" id="iconify-inline-github"></span></a>
+            <a href="https://ruby-digest.herokuapp.com/"><span class="iconify-inline" data-icon="noto:link"
+                data-width="18" data-height="18"></span></a>
+          </p>
+        </article>
+
+      </div>
+    </div>
+    <div class="item-2">
+      <div class="card">
+        <div class="thumb-1"
+          style="background-image: url(https://i.ibb.co/mhhPvNF/Screen-Shot-2022-01-04-at-3-37-07-AM.png);"></div>
+        <article>
+          <span class="app-title">Slack Cli App</span>
+          <p class="app-text">
+            Beyond the green swelling hills of the Mittel Land rose mighty slopes of forest
+            up to the lofty steeps of the Carpathians themselves. Right and left of us they
+            towered, with the afternoon sun falling full upon them and bringing out all the
+            glorious colours of this beautiful range, deep blue and purple in the shadows
+            of the peaks, green and brown where grass and rock mingled, and an endless perspective
+          </p>
+          <p>
+            <a href="https://bit.ly/3rVVdnJ"><span class="iconify-inline" data-icon="openmoji:github" data-width="22"
+                data-height="22" id="iconify-inline-github"></span></a>
+            <a href="https://ruby-digest.herokuapp.com/"><span class="iconify-inline" data-icon="noto:link"
+                data-width="18" data-height="18"></span></a>
+          </p>
+        </article>
+      </div>
+    </div>
+    <div class="item-2">
+      <div class="card">
+        <div class="thumb-2"
+          style="background-image: url(https://i.ibb.co/mhhPvNF/Screen-Shot-2022-01-04-at-3-37-07-AM.png);"></div>
+        <article>
+          <span class="app-title">Exquisite React App</span>
+          <p class="app-text">
+            Beyond the green swelling hills of the Mittel Land rose mighty slopes of forest
+            up to the lofty steeps of the Carpathians themselves. Right and left of us they
+            towered, with the afternoon sun falling full upon them and bringing out all the
+            glorious colours of this beautiful range, deep blue and purple in the shadows
+            of the peaks, green and brown where grass and rock mingled, and an endless perspective
+          </p>
+          <p>
+            <a href="https://bit.ly/3rVVdnJ"><span class="iconify-inline" data-icon="openmoji:github" data-width="22"
+                data-height="22" id="iconify-inline-github"></span></a>
+            <a href="https://ruby-digest.herokuapp.com/"><span class="iconify-inline" data-icon="noto:link"
+                data-width="18" data-height="18"></span></a>
+          </p>
+        </article>
+      </div>
+    </div>
+    <div class="item-2">
+      <div class="card">
+        <div class="thumb-2"
+          style="background-image: url(https://i.ibb.co/mhhPvNF/Screen-Shot-2022-01-04-at-3-37-07-AM.png);"></div>
+        <article>
+          <span class="app-title">Tic-Tac-Toe</span>
+          <p class="app-text">
+            Beyond the green swelling hills of the Mittel Land rose mighty slopes of forest
+            up to the lofty steeps of the Carpathians themselves. Right and left of us they
+            towered, with the afternoon sun falling full upon them and bringing out all the
+            glorious colours of this beautiful range, deep blue and purple in the shadows
+            of the peaks, green and brown where grass and rock mingled, and an endless perspective
+          </p>
+          <p>
+            <a href="https://bit.ly/3rVVdnJ"><span class="iconify-inline" data-icon="openmoji:github" data-width="22"
+                data-height="22" id="iconify-inline-github"></span></a>
+            <a href="https://ruby-digest.herokuapp.com/"><span class="iconify-inline" data-icon="noto:link"
+                data-width="18" data-height="18"></span></a>
+          </p>
+        </article>
+      </div>
+    </div>
   </div>
   <footer class="footer">
-    <p>
-      <a href="https://github.com/spv-hub/solar-system"><span class="iconify-inline" data-icon="logos:linkedin-icon"></span></a>
-      <a href="https://github.com/spv-hub/solar-system"><span class="iconify-inline" data-icon="logos:google-gmail"></span></a>
-      <a href="https://github.com/spv-hub/solar-system"><span class="iconify-inline" data-icon="logos:twitter"></span></a>
+    <p class="p-footer">
+      <a href="https://github.com/spv-hub/solar-system"><span class="iconify-inline" data-icon="logos:linkedin-icon"
+        id="iconify-inline-linkedin"></span></a>
+      <a href="https://github.com/spv-hub/solar-system"><span class="iconify-inline" 
+         data-icon="logos:google-gmail" id="iconify-inline-gmail"></span></a>
+      <a href="https://github.com/spv-hub/solar-system"><span class="iconify-inline" data-icon="logos:twitter"
+        id="iconify-inline-twitter"></span></a>
     </p>
-  © 2021 Sandy Vasquez - powered by Heroku
+    © 2022 Sandy Vasquez - powered by Heroku
   </footer>
-  </body>
-  <html>
+</body>
+<html>
