adding about me text

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div id="top"></div>
     <div id="bottom"></div>
       <li class = "nav-item">
-        <a href="./index.html" >Home</a>
+        <a href="./index.html" >Home |</a>
       </li>
       <li class = "nav-item">
         <a href="./portfolio.html" >Portfolio</a>
@@ -29,24 +29,19 @@
     <div class="section">
       <div class="content">
           <div class="title">
-            <h2>Sandy Vasquez</h2>
+            <span class="bio-text"><h1>Hello...</h1></span> 
             <div class="title_inner">About Me</div>
     <div class="item-1">
     <a class="card_bio">
       <div class="thumb" style="background-image: url(https://i.ibb.co/7jzBKtN/portfolio-background.jpg);"></div>
       <article>
-        <p>
-        Beyond the green swelling hills of the Mittel Land rose mighty slopes of forest 
-        up to the lofty steeps of the Carpathians themselves. Right and left of us they 
-        towered, with the afternoon sun falling full upon them and bringing out all the 
-        glorious colours of this beautiful range, deep blue and purple in the shadows 
-        of the peaks, green and brown where grass and rock mingled, and an endless perspective
-        </p>
+      <p><span class="bio-text">Name: </span>Sandy Vasquez</p>
+      <p><span class="bio-text">Bio:</span> Customer-focused professional in the Technology industry. And a coding Bootcamp graduate. My background in Computer Networking gives me the range to bridge the gap between code and IT infrastructure <br>
+      <p><span class="bio-text">Interests:</span> Philosophy, cryptocurrency, cyber security
       </article>
     </a>
   </div>
        <br> 
-        <br />
           <div class="title"> 
             <div class="title_inner">Experience</div>
           </div>
