--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
       <div id="top"></div>
       <div id="bottom"></div>
         <li class = "nav-item">
-          <a href="./index.html" class="navbar">Home</a>
+          <a href="./index.html" class="navbar">Home |</a>
         </li>
         <li class = "nav-item">
           <a href="./portfolio.html" class="navbar">Portfolio</a>
@@ -83,7 +83,7 @@
       </p>
       <p>
         <a href="https://bit.ly/3rVVdnJ"><span class="iconify-inline" data-icon="openmoji:github" data-width="22" data-height="22"></span></a>
-        <a href="https://bit.ly/3IFfRP1"><span class="iconify-inline" data-icon="noto:link" data-width="18" data-height="18"></span></a>
+        <a href="https://ruby-digest.herokuapp.com/"><span class="iconify-inline" data-icon="noto:link" data-width="18" data-height="18"></span></a>
       </p>
     </article>
   </div>
