--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <div class="thumb" style="background-image: url(https://i.ibb.co/7jzBKtN/portfolio-background.jpg);"></div>
       <article>
       <p><span class="bio-text">Name: </span>Sandy Vasquez</p>
-      <p><span class="bio-text">Bio:</span> Customer-focused professional in the Technology industry. And a coding Bootcamp graduate. My background in Computer Networking gives me the range to bridge the gap between code and IT infrastructure <br>
+      <p><span class="bio-text">Bio:</span> I am a customer-focused professional in the Technology industry. And a coding Bootcamp graduate. My background in Computer Networking gives me the range to bridge the gap between code and IT infrastructure <br>
       <p><span class="bio-text">Interests:</span> Philosophy, cryptocurrency, cyber security
       </article>
     </a>
