--- a/portfolio.html
+++ b/portfolio.html
@@ -89,6 +89,27 @@
         </article>
       </div>
     </div>
+    <div class="item-1">
+      <div class="card">
+        <div class="thumb-4" style="background-image: url(https://i.ibb.co/TBwCcFK/ride-share-rails.png);"></div>
+        <article>
+          <span>Ride Share Rails</span>
+          <p>
+            Beyond the green swelling hills of the Mittel Land rose mighty slopes of forest
+            up to the lofty steeps of the Carpathians themselves. Right and left of us they
+            towered, with the afternoon sun falling full upon them and bringing out all the
+            glorious colours of this beautiful range, deep blue and purple in the shadows
+            of the peaks, green and brown where grass and rock mingled, and an endless perspective
+          </p>
+          <p>
+            <a href="https://github.com/spv-hub/ride-share-rails"><span class="iconify-inline" data-icon="openmoji:github" data-width="22"
+                data-height="22"></span></a>
+            <a href="https://ride-share-service.herokuapp.com/"><span class="iconify-inline" data-icon="noto:link" data-width="18"
+                data-height="18"></span></a>
+          </p>
+        </article>
+      </div>
+    </div>
     <div class="item-2">
       <div class="card">
         <div class="thumb" style="background-image: url(https://i.ibb.co/37Vcg8Y/space.jpg);"></div>
@@ -132,6 +153,69 @@
             <a href="https://ruby-digest.herokuapp.com/"><span class="iconify-inline" data-icon="noto:link"
                 data-width="18" data-height="18"></span></a>
           </p>
+        </article>
+      </div>
+    </div>
+    <div class="item-2">
+      <div class="card">
+        <div class="thumb-2" style="background-image: url(https://i.ibb.co/mhhPvNF/Screen-Shot-2022-01-04-at-3-37-07-AM.png);"></div>
+        <article>
+          <span>Slack Cli App</span>
+          <p>
+            Beyond the green swelling hills of the Mittel Land rose mighty slopes of forest
+            up to the lofty steeps of the Carpathians themselves. Right and left of us they
+            towered, with the afternoon sun falling full upon them and bringing out all the
+            glorious colours of this beautiful range, deep blue and purple in the shadows
+            of the peaks, green and brown where grass and rock mingled, and an endless perspective
+            <p>
+              <a href="https://bit.ly/3rVVdnJ"><span class="iconify-inline" data-icon="openmoji:github" data-width="22"
+                  data-height="22"></span></a>
+              <a href="https://ruby-digest.herokuapp.com/"><span class="iconify-inline" data-icon="noto:link"
+                  data-width="18" data-height="18"></span></a>
+            </p>
+          </article>
+        </article>
+      </div>
+    </div>
+    <div class="item-2">
+      <div class="card">
+        <div class="thumb-2" style="background-image: url(https://i.ibb.co/mhhPvNF/Screen-Shot-2022-01-04-at-3-37-07-AM.png);"></div>
+        <article>
+          <span>Exquisite React App</span>
+          <p>
+            Beyond the green swelling hills of the Mittel Land rose mighty slopes of forest
+            up to the lofty steeps of the Carpathians themselves. Right and left of us they
+            towered, with the afternoon sun falling full upon them and bringing out all the
+            glorious colours of this beautiful range, deep blue and purple in the shadows
+            of the peaks, green and brown where grass and rock mingled, and an endless perspective
+            <p>
+              <a href="https://bit.ly/3rVVdnJ"><span class="iconify-inline" data-icon="openmoji:github" data-width="22"
+                  data-height="22"></span></a>
+              <a href="https://ruby-digest.herokuapp.com/"><span class="iconify-inline" data-icon="noto:link"
+                  data-width="18" data-height="18"></span></a>
+            </p>
+          </article>
+        </article>
+      </div>
+    </div>
+    <div class="item-2">
+      <div class="card">
+        <div class="thumb-2" style="background-image: url(https://i.ibb.co/mhhPvNF/Screen-Shot-2022-01-04-at-3-37-07-AM.png);"></div>
+        <article>
+          <span>Tic-Tac-Toe</span>
+          <p>
+            Beyond the green swelling hills of the Mittel Land rose mighty slopes of forest
+            up to the lofty steeps of the Carpathians themselves. Right and left of us they
+            towered, with the afternoon sun falling full upon them and bringing out all the
+            glorious colours of this beautiful range, deep blue and purple in the shadows
+            of the peaks, green and brown where grass and rock mingled, and an endless perspective
+            <p>
+              <a href="https://bit.ly/3rVVdnJ"><span class="iconify-inline" data-icon="openmoji:github" data-width="22"
+                  data-height="22"></span></a>
+              <a href="https://ruby-digest.herokuapp.com/"><span class="iconify-inline" data-icon="noto:link"
+                  data-width="18" data-height="18"></span></a>
+            </p>
+          </article>
         </article>
       </div>
     </div>
