adding thumb image to ride share rails card

--- a/portfolio.html
+++ b/portfolio.html
@@ -41,7 +41,7 @@
           <p>
             <a href="https://github.com/spv-hub/myZooKeeper"><span class="iconify-inline" data-icon="openmoji:github"
                 data-width="22" data-height="22"></span></a>
-            <a href="https://vimeo.com/662168392"><span
+            <a href="https://vimeo.com/669354435"><span
                 class="iconify-inline" data-icon="noto:link" data-width="18" data-height="18"></span></a>
           </p>
         </article>
@@ -89,9 +89,9 @@
         </article>
       </div>
     </div>
-    <div class="item-1">
+    <div class="item-2">
       <div class="card">
-        <div class="thumb-4" style="background-image: url(https://i.ibb.co/TBwCcFK/ride-share-rails.png);"></div>
+        <div class="thumb-5" style="background-image: url(https://i.ibb.co/sW20Kys/ride.png);"></div>
         <article>
           <span>Ride Share Rails</span>
           <p>
