--- a/portfolio.html
+++ b/portfolio.html
@@ -41,8 +41,9 @@
           <p>
             <a href="https://github.com/spv-hub/myZooKeeper"><span class="iconify-inline" data-icon="openmoji:github"
                 data-width="22" data-height="22"></span></a>
-            <a href="https://vimeo.com/669354435"><span
-                class="iconify-inline" data-icon="noto:link" data-width="18" data-height="18"></span></a>
+
+            <a href="https://vimeo.com/669354435"><span class="iconify-inline" data-icon="noto:link" data-width="18"
+                  data-height="18"></span></a>
           </p>
         </article>
       </div>
