fixing media queries
E styling

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Portfolio</title>
   <script src="index.js"></script>
   <link type="text/css" href="style.css" rel="stylesheet" />
   <link href="https://bit.ly/3rVAh0c" rel="stylesheet" />
   <script src="https://bit.ly/31Sp85f"></script>
 </head>
+
 <body>
   <nav class="navbar">
     <div id="left"></div>
@@ -26,7 +28,8 @@
   <div class="band">
     <div class="item-1">
       <div class="card">
-        <div class="thumb-1" style="background-image: url(https://i.ibb.co/XVd2mNJ/0-C213537-9-EF8-4-E43-809-B-9-A8-CFE795352.png);"></div>
+        <div class="thumb-1"
+          style="background-image: url(https://i.ibb.co/XVd2mNJ/0-C213537-9-EF8-4-E43-809-B-9-A8-CFE795352.png);"></div>
         <article>
           <span>Pet Calendar App</span>
           <p>
@@ -41,14 +44,14 @@
                 data-width="22" data-height="22"></span></a>
 
             <a href="https://vimeo.com/669354435"><span class="iconify-inline" data-icon="noto:link" data-width="18"
-                  data-height="18"></span></a>
+                data-height="18"></span></a>
           </p>
         </article>
       </div>
     </div>
     <div class="item-1">
       <div class="card">
-        <div class="thumb" style="background-image: url(https://bit.ly/3pNEkZL);"></div>
+        <div class="thumb-3" style="background-image: url(https://bit.ly/3pNEkZL);"></div>
         <article>
           <span>Video Rental Store</span>
           <p>
@@ -80,10 +83,10 @@
             of the peaks, green and brown where grass and rock mingled, and an endless perspective
           </p>
           <p>
-            <a href="https://github.com/spv-hub/media-ranker"><span class="iconify-inline" data-icon="openmoji:github" data-width="22"
-                data-height="22"></span></a>
-            <a href="https://media-ranker-digest.herokuapp.com/"><span class="iconify-inline" data-icon="noto:link" data-width="18"
-                data-height="18"></span></a>
+            <a href="https://github.com/spv-hub/media-ranker"><span class="iconify-inline" data-icon="openmoji:github"
+                data-width="22" data-height="22"></span></a>
+            <a href="https://media-ranker-digest.herokuapp.com/"><span class="iconify-inline" data-icon="noto:link"
+                data-width="18" data-height="18"></span></a>
           </p>
         </article>
       </div>
@@ -101,17 +104,17 @@
             of the peaks, green and brown where grass and rock mingled, and an endless perspective
           </p>
           <p>
-            <a href="https://github.com/spv-hub/ride-share-rails"><span class="iconify-inline" data-icon="openmoji:github" data-width="22"
-                data-height="22"></span></a>
-            <a href="https://ride-share-service.herokuapp.com/"><span class="iconify-inline" data-icon="noto:link" data-width="18"
-                data-height="18"></span></a>
+            <a href="https://github.com/spv-hub/ride-share-rails"><span class="iconify-inline"
+                data-icon="openmoji:github" data-width="22" data-height="22"></span></a>
+            <a href="https://ride-share-service.herokuapp.com/"><span class="iconify-inline" data-icon="noto:link"
+                data-width="18" data-height="18"></span></a>
           </p>
         </article>
       </div>
     </div>
     <div class="item-2">
       <div class="card">
-        <div class="thumb" style="background-image: url(https://i.ibb.co/37Vcg8Y/space.jpg);"></div>
+        <div class="thumb-solar" style="background-image: url(https://i.ibb.co/37Vcg8Y/space.jpg);"></div>
         <article>
           <span>Solar System CLI</span>
           <p>Upon execution, the CLI program outputs the following:</p>
@@ -136,7 +139,8 @@
     </div>
     <div class="item-3">
       <div class="card">
-        <div class="thumb-2" style="background-image: url(https://i.ibb.co/9pgsnGQ/Screen-Shot-2022-01-03-at-8-04-08-PM.png);"></div>
+        <div class="thumb-book-review"
+          style="background-image: url(https://i.ibb.co/9pgsnGQ/Screen-Shot-2022-01-03-at-8-04-08-PM.png);"></div>
         <article>
           <span>Book Review Site</span>
           <p>
@@ -157,7 +161,8 @@
     </div>
     <div class="item-2">
       <div class="card">
-        <div class="thumb-2" style="background-image: url(https://i.ibb.co/mhhPvNF/Screen-Shot-2022-01-04-at-3-37-07-AM.png);"></div>
+        <div class="thumb-1"
+          style="background-image: url(https://i.ibb.co/mhhPvNF/Screen-Shot-2022-01-04-at-3-37-07-AM.png);"></div>
         <article>
           <span>Slack Cli App</span>
           <p>
@@ -172,13 +177,14 @@
               <a href="https://ruby-digest.herokuapp.com/"><span class="iconify-inline" data-icon="noto:link"
                   data-width="18" data-height="18"></span></a>
             </p>
-          </article>
+        </article>
         </article>
       </div>
     </div>
     <div class="item-2">
       <div class="card">
-        <div class="thumb-2" style="background-image: url(https://i.ibb.co/mhhPvNF/Screen-Shot-2022-01-04-at-3-37-07-AM.png);"></div>
+        <div class="thumb-2"
+          style="background-image: url(https://i.ibb.co/mhhPvNF/Screen-Shot-2022-01-04-at-3-37-07-AM.png);"></div>
         <article>
           <span>Exquisite React App</span>
           <p>
@@ -193,13 +199,14 @@
               <a href="https://ruby-digest.herokuapp.com/"><span class="iconify-inline" data-icon="noto:link"
                   data-width="18" data-height="18"></span></a>
             </p>
-          </article>
+        </article>
         </article>
       </div>
     </div>
     <div class="item-2">
       <div class="card">
-        <div class="thumb-2" style="background-image: url(https://i.ibb.co/mhhPvNF/Screen-Shot-2022-01-04-at-3-37-07-AM.png);"></div>
+        <div class="thumb-2"
+          style="background-image: url(https://i.ibb.co/mhhPvNF/Screen-Shot-2022-01-04-at-3-37-07-AM.png);"></div>
         <article>
           <span>Tic-Tac-Toe</span>
           <p>
@@ -214,7 +221,7 @@
               <a href="https://ruby-digest.herokuapp.com/"><span class="iconify-inline" data-icon="noto:link"
                   data-width="18" data-height="18"></span></a>
             </p>
-          </article>
+        </article>
         </article>
       </div>
     </div>
@@ -223,12 +230,12 @@
     <p class="p-footer">
       <a href="https://github.com/spv-hub/solar-system"><span class="iconify-inline" data-icon="logos:linkedin-icon"
           id="iconify-inline-linkedin"></span></a>
-      <a href="https://github.com/spv-hub/solar-system"><span class="iconify-inline"
-          data-icon="logos:google-gmail"></span></a>
+      <a href="https://github.com/spv-hub/solar-system"><span class="iconify-inline" data-icon="logos:google-gmail"
+          id="iconify-inline-gmail"></span></a>
       <a href="https://github.com/spv-hub/solar-system"><span class="iconify-inline" data-icon="logos:twitter"
           id="iconify-inline-twitter"></span></a>
     </p>
-    © 2021 Sandy Vasquez - powered by Heroku
+    © 2022 Sandy Vasquez - powered by Heroku
   </footer>
 </body>
 <html>
