--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,7 @@
           style="background-image: url(https://i.ibb.co/XVd2mNJ/0-C213537-9-EF8-4-E43-809-B-9-A8-CFE795352.png);"></div>
         <article>
           <span>Pet Calendar App</span>
-          <p>
+          <p class="app-text">
             Beyond the green swelling hills of the Mittel Land rose mighty slopes of forest
             up to the lofty steeps of the Carpathians themselves. Right and left of us they
             towered, with the afternoon sun falling full upon them and bringing out all the
@@ -54,7 +54,7 @@
         <div class="thumb-3" style="background-image: url(https://bit.ly/3pNEkZL);"></div>
         <article>
           <span>Video Rental Store</span>
-          <p>
+          <p class="app-text">
             Beyond the green swelling hills of the Mittel Land rose mighty slopes of forest
             up to the lofty steeps of the Carpathians themselves. Right and left of us they
             towered, with the afternoon sun falling full upon them and bringing out all the
@@ -75,7 +75,7 @@
         <div class="thumb-3" style="background-image: url(https://i.ibb.co/6ys4fN7/media-ranker-digest.png);"></div>
         <article>
           <span>Media Ranker Digest</span>
-          <p>
+          <p class="app-text">
             Beyond the green swelling hills of the Mittel Land rose mighty slopes of forest
             up to the lofty steeps of the Carpathians themselves. Right and left of us they
             towered, with the afternoon sun falling full upon them and bringing out all the
@@ -96,7 +96,7 @@
         <div class="thumb-5" style="background-image: url(https://i.ibb.co/sW20Kys/ride.png);"></div>
         <article>
           <span>Ride Share Rails</span>
-          <p>
+          <p class="app-text">
             Beyond the green swelling hills of the Mittel Land rose mighty slopes of forest
             up to the lofty steeps of the Carpathians themselves. Right and left of us they
             towered, with the afternoon sun falling full upon them and bringing out all the
@@ -143,7 +143,7 @@
           style="background-image: url(https://i.ibb.co/9pgsnGQ/Screen-Shot-2022-01-03-at-8-04-08-PM.png);"></div>
         <article>
           <span>Book Review Site</span>
-          <p>
+          <p class="app-text">
             Beyond the green swelling hills of the Mittel Land rose mighty slopes of forest
             up to the lofty steeps of the Carpathians themselves. Right and left of us they
             towered, with the afternoon sun falling full upon them and bringing out all the
@@ -165,19 +165,19 @@
           style="background-image: url(https://i.ibb.co/mhhPvNF/Screen-Shot-2022-01-04-at-3-37-07-AM.png);"></div>
         <article>
           <span>Slack Cli App</span>
-          <p>
+          <p class="app-text">
             Beyond the green swelling hills of the Mittel Land rose mighty slopes of forest
             up to the lofty steeps of the Carpathians themselves. Right and left of us they
             towered, with the afternoon sun falling full upon them and bringing out all the
             glorious colours of this beautiful range, deep blue and purple in the shadows
             of the peaks, green and brown where grass and rock mingled, and an endless perspective
-            <p>
-              <a href="https://bit.ly/3rVVdnJ"><span class="iconify-inline" data-icon="openmoji:github" data-width="22"
-                  data-height="22"></span></a>
-              <a href="https://ruby-digest.herokuapp.com/"><span class="iconify-inline" data-icon="noto:link"
-                  data-width="18" data-height="18"></span></a>
-            </p>
-        </article>
+          </p>
+          <p>
+            <a href="https://bit.ly/3rVVdnJ"><span class="iconify-inline" data-icon="openmoji:github" data-width="22"
+                data-height="22"></span></a>
+            <a href="https://ruby-digest.herokuapp.com/"><span class="iconify-inline" data-icon="noto:link"
+                data-width="18" data-height="18"></span></a>
+          </p>
         </article>
       </div>
     </div>
@@ -187,19 +187,19 @@
           style="background-image: url(https://i.ibb.co/mhhPvNF/Screen-Shot-2022-01-04-at-3-37-07-AM.png);"></div>
         <article>
           <span>Exquisite React App</span>
-          <p>
+          <p class="app-text">
             Beyond the green swelling hills of the Mittel Land rose mighty slopes of forest
             up to the lofty steeps of the Carpathians themselves. Right and left of us they
             towered, with the afternoon sun falling full upon them and bringing out all the
             glorious colours of this beautiful range, deep blue and purple in the shadows
             of the peaks, green and brown where grass and rock mingled, and an endless perspective
-            <p>
-              <a href="https://bit.ly/3rVVdnJ"><span class="iconify-inline" data-icon="openmoji:github" data-width="22"
-                  data-height="22"></span></a>
-              <a href="https://ruby-digest.herokuapp.com/"><span class="iconify-inline" data-icon="noto:link"
-                  data-width="18" data-height="18"></span></a>
-            </p>
-        </article>
+          </p>
+          <p>
+            <a href="https://bit.ly/3rVVdnJ"><span class="iconify-inline" data-icon="openmoji:github" data-width="22"
+                data-height="22"></span></a>
+            <a href="https://ruby-digest.herokuapp.com/"><span class="iconify-inline" data-icon="noto:link"
+                data-width="18" data-height="18"></span></a>
+          </p>
         </article>
       </div>
     </div>
@@ -209,19 +209,19 @@
           style="background-image: url(https://i.ibb.co/mhhPvNF/Screen-Shot-2022-01-04-at-3-37-07-AM.png);"></div>
         <article>
           <span>Tic-Tac-Toe</span>
-          <p>
+          <p class="app-text">
             Beyond the green swelling hills of the Mittel Land rose mighty slopes of forest
             up to the lofty steeps of the Carpathians themselves. Right and left of us they
             towered, with the afternoon sun falling full upon them and bringing out all the
             glorious colours of this beautiful range, deep blue and purple in the shadows
             of the peaks, green and brown where grass and rock mingled, and an endless perspective
-            <p>
-              <a href="https://bit.ly/3rVVdnJ"><span class="iconify-inline" data-icon="openmoji:github" data-width="22"
-                  data-height="22"></span></a>
-              <a href="https://ruby-digest.herokuapp.com/"><span class="iconify-inline" data-icon="noto:link"
-                  data-width="18" data-height="18"></span></a>
-            </p>
-        </article>
+          </p>
+          <p>
+            <a href="https://bit.ly/3rVVdnJ"><span class="iconify-inline" data-icon="openmoji:github" data-width="22"
+                data-height="22"></span></a>
+            <a href="https://ruby-digest.herokuapp.com/"><span class="iconify-inline" data-icon="noto:link"
+                data-width="18" data-height="18"></span></a>
+          </p>
         </article>
       </div>
     </div>
