--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,12 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Portfolio</title>
+  <!-- favicon -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <!-- end -->
   <script src="index.js"></script>
   <link type="text/css" href="style.css" rel="stylesheet" />
   <link href="https://bit.ly/3rVAh0c" rel="stylesheet" />
@@ -41,7 +47,7 @@
           </p>
           <p>
             <a href="https://github.com/spv-hub/myZooKeeper"><span class="iconify-inline" data-icon="openmoji:github"
-                data-width="22" data-height="22"></span></a>
+                data-width="22" data-height="22" id="iconify-inline-github"></span></a>
 
             <a href="https://vimeo.com/669354435"><span class="iconify-inline" data-icon="noto:link" data-width="18"
                 data-height="18"></span></a>
@@ -63,7 +69,7 @@
           </p>
           <p>
             <a href="https://bit.ly/3GvjK7p"><span class="iconify-inline" data-icon="openmoji:github" data-width="22"
-                data-height="22"></span></a>
+                data-height="22" id="iconify-inline-github"></span></a>
             <a href="https://bit.ly/3EMxxG2"><span class="iconify-inline" data-icon="noto:link" data-width="18"
                 data-height="18"></span></a>
           </p>
@@ -84,7 +90,7 @@
           </p>
           <p>
             <a href="https://github.com/spv-hub/media-ranker"><span class="iconify-inline" data-icon="openmoji:github"
-                data-width="22" data-height="22"></span></a>
+                data-width="22" data-height="22" id="iconify-inline-github"></span></a>
             <a href="https://media-ranker-digest.herokuapp.com/"><span class="iconify-inline" data-icon="noto:link"
                 data-width="18" data-height="18"></span></a>
           </p>
@@ -105,7 +111,7 @@
           </p>
           <p>
             <a href="https://github.com/spv-hub/ride-share-rails"><span class="iconify-inline"
-                data-icon="openmoji:github" data-width="22" data-height="22"></span></a>
+                data-icon="openmoji:github" data-width="22" data-height="22" id="iconify-inline-github"></span></a>
             <a href="https://ride-share-service.herokuapp.com/"><span class="iconify-inline" data-icon="noto:link"
                 data-width="18" data-height="18"></span></a>
           </p>
@@ -117,8 +123,8 @@
         <div class="thumb-solar" style="background-image: url(https://i.ibb.co/37Vcg8Y/space.jpg);"></div>
         <article>
           <span>Solar System CLI</span>
-          <p>Upon execution, the CLI program outputs the following:</p>
-          <ol>
+          <p class="app-text-1">Upon execution, the CLI program outputs the following:</p>
+          <ol class="list-text">
             <li><strong>list details:</strong> The CLI program, creates a separate list for planets.
             </li>
             <li><strong>read alien details:</strong> If found, details about the alien are displayed.
@@ -130,7 +136,7 @@
           </ol>
           <p>
             <a href="https://github.com/spv-hub/solar-system"><span class="iconify-inline" data-icon="openmoji:github"
-                data-width="22" data-height="22"></span></a>
+                data-width="22" data-height="22" id="iconify-inline-github"></span></a>
             <a href="https://drive.google.com/file/d/1JGCrWN9mm1Xe1c1uwl697k8Fz_f0aq0R/view"><span
                 class="iconify-inline" data-icon="noto:link" data-width="18" data-height="18"></span></a>
           </p>
@@ -152,11 +158,12 @@
           </p>
           <p>
             <a href="https://bit.ly/3rVVdnJ"><span class="iconify-inline" data-icon="openmoji:github" data-width="22"
-                data-height="22"></span></a>
+                data-height="22" id="iconify-inline-github"></span></a>
             <a href="https://ruby-digest.herokuapp.com/"><span class="iconify-inline" data-icon="noto:link"
                 data-width="18" data-height="18"></span></a>
           </p>
         </article>
+
       </div>
     </div>
     <div class="item-2">
@@ -174,7 +181,7 @@
           </p>
           <p>
             <a href="https://bit.ly/3rVVdnJ"><span class="iconify-inline" data-icon="openmoji:github" data-width="22"
-                data-height="22"></span></a>
+                data-height="22" id="iconify-inline-github"></span></a>
             <a href="https://ruby-digest.herokuapp.com/"><span class="iconify-inline" data-icon="noto:link"
                 data-width="18" data-height="18"></span></a>
           </p>
@@ -196,7 +203,7 @@
           </p>
           <p>
             <a href="https://bit.ly/3rVVdnJ"><span class="iconify-inline" data-icon="openmoji:github" data-width="22"
-                data-height="22"></span></a>
+                data-height="22" id="iconify-inline-github"></span></a>
             <a href="https://ruby-digest.herokuapp.com/"><span class="iconify-inline" data-icon="noto:link"
                 data-width="18" data-height="18"></span></a>
           </p>
@@ -218,7 +225,7 @@
           </p>
           <p>
             <a href="https://bit.ly/3rVVdnJ"><span class="iconify-inline" data-icon="openmoji:github" data-width="22"
-                data-height="22"></span></a>
+                data-height="22" id="iconify-inline-github"></span></a>
             <a href="https://ruby-digest.herokuapp.com/"><span class="iconify-inline" data-icon="noto:link"
                 data-width="18" data-height="18"></span></a>
           </p>
